# ZCLI

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: PROMPT_FUNCTIONAL_TESTS.md  index.md
docs/architecture/: agents-teams-worktrees.md  api-contracts.md  context-compaction.md  data-flow.md  hooks.md  mcp.md  module-map.md  overview.md  planning-and-tasks.md  skills.md
docs/decisions/: ADR-0001-tech-stack.md
docs/development/: coding-standards.md  commands.md  env-vars.md  git-workflow.md  setup.md
docs/fix/: endwithouttoolresult.md  teammemberkeepworking.md
docs/interview/: compact.md  compactTradeoff.md  hooks.md  mcp.md  memoryAndSession.md  skills.md  subagentAndTeam.md  todo-and-task.md  todoAndTask.md
docs/operations/: deployment.md  troubleshooting.md
docs/research/: experiment-log.md  idea-backlog.md  references.md
docs/testing/: PROMPT_FUNCTIONAL_TESTS.md  (+3 more)
tests/: test_agent.py  test_agent_supplement.py  test_artifacts.py  test_artifacts_supplement.py  test_cli.py  test_config_recovery.py  test_config_supplement.py  test_context.py  test_context_supplement.py  test_display.py  test_display_supplement.py  test_hooks.py  test_hooks_supplement.py  test_mcp.py  test_memory.py  test_memory_supplement.py  test_permissions.py  test_permissions_supplement.py  test_recovery.py  test_recovery_supplement.py  test_session.py  test_session_supplement.py  test_skills.py  test_skills_supplement.py  test_subagents.py  test_subagents_supplement.py  test_tasks.py  test_tasks_supplement.py  test_teams.py  test_teams_supplement.py  test_todos.py  test_tools.py  test_tools_supplement.py  test_worktrees.py  test_worktrees_supplement.py
zcli/: __init__.py  agent.py  artifacts.py  cli.py  config.py  context.py  display.py  hooks.py  mcp.py  memory.py  permissions.py  recovery.py  session.py  skills.py  subagents.py  tasks.py  teams.py  tools.py  worktrees.py
(+12 files in other folders)
