[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "zcli-agent"
version = "0.1.0"
description = "A small, persistent personal coding agent inspired by learn-claude-code s20."
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.25.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
zcli = "zcli.cli:main"

[tool.setuptools.packages.find]
include = ["zcli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

